--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2> How can a project do Full Stack <i>right</i> ?</h2>
-            <p> The office of the CTO guide your project to Full Stack readiness. </p>
+            <p> The office of the CTO can guide your project to Full Stack readiness. </p>
             <a href="pages/offerings.html" class="btn btn-default btn-lg"> Get Help </a> <br> <br>
             <p> Our Full Stack team can design and audit project architecture, tools, processes, and practices and offer recommendations and support to do Full Stack right.</p>
           </div>
