--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full Stack in GBS</title>
+    <title>New Stack in GBS</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,10 +39,10 @@
               <a class="nav-link js-scroll-trigger" href="#overview">Overview</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#gethelp">Full Stack Help</a>
+              <a class="nav-link js-scroll-trigger" href="#gethelp">Our Offering</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -61,7 +61,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h1 class="brand-heading">Full Stack <br> <span style="color: #00B0F0"> in GBS </span> </h1>
+              <h1 class="brand-heading">NewStack <br> <span style="color: #00B0F0"> in GBS </span> </h1>
               <p class="intro-text">  </p>
               <a href="#myths" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
@@ -77,16 +77,18 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2> What is Full Stack <i>not</i> ?</h2> <br>
+            <h2> Who we are </h2> <br>
               <table align="center">
                 <tr>
-                  <td> Full Stack is NOT synonymous with </td>
+                  <td> We are a team of fullstack programmers, who build: </td>
                   <td>
                       <ul>
-                        <li> Web Development </li>
-                        <li> Front End / UX Development </li>
-                        <li> DevOps </li>
-                        <li> Javascript... </li>
+                        <li> Scalable Microservice architectures </li>
+                        <li> Beautiful and responsive frontends </li>
+                        <li> DevOps pipelines </li>
+                        <li> Continuos integration and git </li>
+                        <li> Testing and full code coverage </li>
+                        <li> Full documentation and code commentary </li>
                       </ul>
                   </td>
                 </tr>
@@ -101,16 +103,17 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h4> Full Stack is about more than just programming languages </h4>
+            <h4> NewStack is more than just knowing many programming languages </h4>
             <p> It is a methodology, an approach, a mindset. </p> <br> <br>
             <table align="center">
               <tr>
-                <td> Full Stackers... </td>
+                <td> Our NewStack Team... </td>
                 <td>
                     <ul>
-                      <li> Think through applications holistically </li>
-                      <li> Employ modern engineering best practices </li>
-                      <li> Fuse open source and proprietary tools </li>
+                      <li> Thinks through applications holistically </li>
+                      <li> Architects a scalable solution </li>
+                      <li> Employs modern engineering best practices </li>
+                      <li> Fuses open source and proprietary tools </li>
                     </ul>
                 </td>
               </tr>
@@ -126,17 +129,17 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2> How can a project do Full Stack <i>right</i> ?</h2>
-            <p> The office of the CTO can guide your project to Full Stack readiness. </p>
-            <a href="pages/offerings.html" class="btn btn-default btn-lg"> Get Help </a> <br> <br>
-            <p> Our Full Stack team can design and audit project architecture, tools, processes, and practices and offer recommendations and support to do Full Stack right.</p>
-          </div>
+            <h2> How can a project deliver the <i>best</i> technical solution to the client?</h2>
+            <p> The office of the CTO can help with our NewStack service.</p>
+            <a href="pages/offerings.html" class="btn btn-default btn-lg"> See Offering </a> <br> <br>
+<!--             <p> Our NewStack team can design and audit project architecture, and actually code the </p>
+ -->          </div>
         </div>
       </div>
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="download-section content-section text-center">
+<!--     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Download Full Stack POV</h2>
@@ -144,7 +147,7 @@
           <a href="https://ibm.box.com/s/bgn9l6rghz3iw7zmy24m863pov0fma93" class="btn btn-default btn-lg">Visit Download Page</a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section commented out for first rev
     <section id="contact" class="content-section text-center">
