--- a/pages/offerings.html
+++ b/pages/offerings.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full Stack in GBS</title>
+    <title>New Stack in GBS</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -46,8 +46,7 @@
     <!-- Intro Header -->
     <header class="singlepage-masthead">
       <div class="intro-body">
-        <h1> How to do Full Stack right </h1>
-        <p class="intro-text"> The Office of the CTO can help your project achieve Full Stack readiness </p>
+        <h1> The NewStack Offering </h1>
         </a>
       </div>
     </header>
@@ -83,20 +82,34 @@
             <table class="table table-dark">
               <tr>
                 <td> Offering </td>
-                <td> 1-3 Full Stack Leaders to set your project up for success (2+ weeks) </td>
+                <td>
+                - NewStack team to set your project up for success (2-4 weeks)
+                - 1 Newstack leader dedicated to your project for entire duration 
+                </td>
               </tr>
               <tr>
                 <td> When to engage? </td>
-                <td> Precontract, Project launch </td>
+                <td> At the moment you are ready to write code </td>
               </tr>
               <tr>
                 <td> Deliverable </td>
-                <td> Full Stack playbook and dedicated onsite guidance </td>
+                <td> 
+                - Architecture strategy and design playbook 
+                - Initial code respository (first ~100 commits)
+                - Deployed and running on Bluemix
+                - Well documented version control process with git
+                - Continuos integration
+                - Easily extendable testing framework in place
+                - 100% documentation and code commentary
+                </td>
               </tr>
               <tr>
                 <td> Contact </td>
-                <td> Nate Keating | natekeating@us.ibm.com </td>
-              </tr>
+                <td> 
+                - Nate Keating | natekeating@us.ibm.com
+                - Aljosha Novakovic | aljosha.novakovic@ibm.com
+                </td>
+               </tr>
             </table>
           </div>
         </div>
