--- a/pages/offerings.html
+++ b/pages/offerings.html
@@ -56,8 +56,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h4> Full Stack Design & Onboarding </h4>
-            <p align="left"> Our Full stack Development team can assist projects in designing their full stack applications and development processes, covering a wide range of important topics including: </p>
+            <h4> An expert team to help you deliver the best technical solution. </h4>
+            <p align="left"> The NewStack team comes into play right at the moment the project is ready to execute and write code, because we actually write the code for the initial app. However, the majority of the value comes from the best practices and tools that we establish around the app, which will allow for future long term developers to easily on-board, and continue to push code that is secure, reliable, and scalable. These best practices include:
+            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -83,8 +84,8 @@
               <tr>
                 <td> Offering </td>
                 <td>
-                - NewStack team to set your project up for success (2-4 weeks)
-                - 1 Newstack leader dedicated to your project for entire duration 
+                NewStack team to set your project up for success (2-4 weeks)<br>
+                1 Newstack leader dedicated to your project for entire duration<br>
                 </td>
               </tr>
               <tr>
@@ -94,20 +95,20 @@
               <tr>
                 <td> Deliverable </td>
                 <td> 
-                - Architecture strategy and design playbook 
-                - Initial code respository (first ~100 commits)
-                - Deployed and running on Bluemix
-                - Well documented version control process with git
-                - Continuos integration
-                - Easily extendable testing framework in place
-                - 100% documentation and code commentary
+                Architecture strategy and design playbook<br> 
+                Initial code respository (first ~100 commits)<br>
+                Deployed and running on Bluemix<br>
+                Well documented version control process with git<br>
+                Continuos integration<br>
+                Easily extendable testing framework in place<br>
+                100% documentation and code commentary<br>
                 </td>
               </tr>
               <tr>
                 <td> Contact </td>
                 <td> 
-                - Nate Keating | natekeating@us.ibm.com
-                - Aljosha Novakovic | aljosha.novakovic@ibm.com
+                Nate Keating | natekeating@us.ibm.com<br>
+                Aljosha Novakovic | aljosha.novakovic@ibm.com
                 </td>
                </tr>
             </table>
