--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#gethelp">Our Offering</a>
             </li>
-            <li class="nav-item">
+    <!--         <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-            </li>
+            </li> -->
             <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li> -->
@@ -149,15 +149,12 @@
       </div>
     </section> -->
 
-    <!-- Contact Section commented out for first rev
+<!--     Contact Section commented out for first rev
     <section id="contact" class="content-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact Start Bootstrap</h2>
-            <p>Feel free to leave us a comment on the
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
-              on Start Bootstrap to give some feedback about this theme!</p>
+            <div>Send us an email 
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
@@ -181,8 +178,8 @@
           </div>
         </div>
       </div>
-    </section>
-    -->
+    </section> -->
+   
 
     <!-- Map Section commented out for first rev
     <div id="map"></div>
