applied priyas suggestions

--- a/pages/offerings.html
+++ b/pages/offerings.html
@@ -95,7 +95,8 @@
               <tr>
                 <td> Deliverable </td>
                 <td> 
-                Architecture strategy and design playbook<br> 
+                Fullstack application design and architecture strategy<br> 
+                Choice of technology and tools<br> 
                 Initial code respository (first ~100 commits)<br>
                 Deployed and running on Bluemix<br>
                 Well documented version control process with git<br>
